--- a/paycheck.html
+++ b/paycheck.html
@@ -171,7 +171,7 @@
         <nav class="text-sm mb-4 text-gray-600">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="us-taxation.html" class="hover:text-blue-600">US Taxation (Federal)</a> &raquo;
+          <a href="us-subcategories/taxes.html" class="hover:text-blue-600">US Taxation (Federal)</a> &raquo;
           <span>Paycheck Calculator</span>
         </nav>
 
