--- a/washington-income-tax.html
+++ b/washington-income-tax.html
@@ -195,7 +195,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h2 class="text-lg font-semibold text-gray-900 mb-3">Explore More</h2>
                         <ul class="space-y-2 text-sm text-blue-600">
-                            <li><a href="taxation.html" class="hover:underline">US State Tax Calculators</a></li>
+                            <li><a href="subcategories/taxes.html" class="hover:underline">US State Tax Calculators</a></li>
                             <li><a href="finance.html" class="hover:underline">Finance Tools</a></li>
                             <li><a href="index.html#categories" class="hover:underline">All Categories</a></li>
                         </ul>
