--- a/tile.html
+++ b/tile.html
@@ -251,7 +251,7 @@
 <li><a href="/health-fitness.html">Health and Fitness</a></li>
 <li><a href="/math.html">Math</a></li>
 <li><a href="/science.html">Science</a></li>
-<li><a href="/taxation.html">Taxation</a></li>
+<li><a href="/subcategories/taxes.html">Taxation</a></li>
 </ul>
 </div>
 <div class="footer-column">
