--- a/jewelry-making-calculator.html
+++ b/jewelry-making-calculator.html
@@ -88,7 +88,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Lifestyle Everyday","item":"https://calcdomain.com/lifestyle-everyday.html"},
-      {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/lifestyle-hobbies.html"},
+      {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/hobbies.html"},
       {"@type":"ListItem","position":4,"name":"Jewelry Making Calculator","item":"https://calcdomain.com/jewelry-making-calculator.html"}
     ]
   }
@@ -133,7 +133,7 @@
       <nav aria-label="Breadcrumb" class="help">
         <a href="index.html">Home</a> &raquo;
         <a href="lifestyle-everyday.html">Lifestyle Everyday</a> &raquo;
-        <a href="subcategories/lifestyle-hobbies.html">Hobbies</a> &raquo;
+        <a href="subcategories/hobbies.html">Hobbies</a> &raquo;
         <span aria-current="page">Jewelry Making Calculator</span>
       </nav>
     </div>
