--- a/strength-training-calculator.html
+++ b/strength-training-calculator.html
@@ -134,7 +134,7 @@ body * { visibility: hidden; }
 "itemListElement": [
 { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
 { "@type": "ListItem", "position": 2, "name": "Lifestyle & Everyday", "item": "https://calcdomain.com/lifestyle-everyday.html" },
-{ "@type": "ListItem", "position": 3, "name": "Hobbies", "item": "https://calcdomain.com/subcategories/lifestyle-hobbies.html" },
+{ "@type": "ListItem", "position": 3, "name": "Hobbies", "item": "https://calcdomain.com/subcategories/hobbies.html" },
 { "@type": "ListItem", "position": 4, "name": "Strength Training Calculator", "item": "https://calcdomain.com/strength-training-calculator.html" }
 ]
 }
@@ -225,7 +225,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
 <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle &amp; Everyday</a> &raquo;
-<a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
+<a href="subcategories/hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
 <span class="text-gray-900">Strength Training Calculator</span>
 </nav>
 
