--- a/cardio-calculator.html
+++ b/cardio-calculator.html
@@ -100,7 +100,7 @@ header, footer, aside, #calculator-tabs { display: none !important; }
 "itemListElement": [
 { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
 { "@type": "ListItem", "position": 2, "name": "Lifestyle", "item": "https://calcdomain.com/lifestyle-everyday.html" },
-{ "@type": "ListItem", "position": 3, "name": "Hobbies", "item": "https://calcdomain.com/subcategories/lifestyle-hobbies.html" },
+{ "@type": "ListItem", "position": 3, "name": "Hobbies", "item": "https://calcdomain.com/subcategories/hobbies.html" },
 { "@type": "ListItem", "position": 4, "name": "Cardio Calculator", "item": "https://calcdomain.com/cardio-calculator.html" }
 ]
 }
@@ -187,7 +187,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
 <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
-<a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
+<a href="subcategories/hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
 <span class="text-gray-900">Cardio Calculator</span>
 </nav>
 
