--- a/gardening-calculator.html
+++ b/gardening-calculator.html
@@ -68,7 +68,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Lifestyle Everyday","item":"https://calcdomain.com/lifestyle-everyday.html"},
-      {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/lifestyle-hobbies.html"},
+      {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/hobbies.html"},
       {"@type":"ListItem","position":4,"name":"Gardening Calculator","item":"https://calcdomain.com/gardening-calculator.html"}
     ]
   }
@@ -125,7 +125,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Home</a> &raquo;
           <a href="lifestyle-everyday.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Lifestyle Everyday</a> &raquo;
-          <a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Hobbies</a> &raquo;
+          <a href="subcategories/hobbies.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Hobbies</a> &raquo;
           <span class="text-gray-900">Gardening Calculator</span>
         </nav>
 
