--- a/origami-calculator.html
+++ b/origami-calculator.html
@@ -129,7 +129,7 @@
     <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
       <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
       <a href="lifestyle-everyday.html" class="hover:text-blue-700">Lifestyle Everyday</a> &raquo;
-      <a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-700">Hobbies</a> &raquo;
+      <a href="subcategories/hobbies.html" class="hover:text-blue-700">Hobbies</a> &raquo;
       <span class="text-gray-900">Origami Calculator</span>
     </nav>
 
