--- a/quilting-calculator.html
+++ b/quilting-calculator.html
@@ -139,7 +139,7 @@ display: none;
       "@type": "ListItem",
       "position": 3,
       "name": "Hobbies",
-      "item": "https://calcdomain.com/subcategories/lifestyle-hobbies.html"
+      "item": "https://calcdomain.com/subcategories/hobbies.html"
     },
     {
       "@type": "ListItem",
@@ -202,7 +202,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
 <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
-<a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
+<a href="subcategories/hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
 <span class="text-gray-900">Quilting Calculator</span>
 </nav>
 
