--- a/scrapbooking-calculator.html
+++ b/scrapbooking-calculator.html
@@ -67,7 +67,7 @@
         "itemListElement":[
           {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
           {"@type":"ListItem","position":2,"name":"Lifestyle Everyday","item":"https://calcdomain.com/lifestyle-everyday.html"},
-          {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/lifestyle-hobbies.html"},
+          {"@type":"ListItem","position":3,"name":"Hobbies","item":"https://calcdomain.com/subcategories/hobbies.html"},
           {"@type":"ListItem","position":4,"name":"Scrapbooking Calculator","item":"https://calcdomain.com/scrapbooking-calculator.html"}
         ]
       },
@@ -95,7 +95,7 @@
       <nav aria-label="Breadcrumb" class="hidden sm:block text-sm text-gray-600">
         <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
         <a href="lifestyle-everyday.html" class="hover:text-blue-700">Lifestyle Everyday</a> &raquo;
-        <a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-700">Hobbies</a> &raquo;
+        <a href="subcategories/hobbies.html" class="hover:text-blue-700">Hobbies</a> &raquo;
         <span class="text-gray-900">Scrapbooking Calculator</span>
       </nav>
     </div>
