--- a/index.html
+++ b/index.html
@@ -562,19 +562,36 @@
                         </div>
                     </div>
                 </a>
-
-
-                                        <a href="construction.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
-                <div class="bg-blue-100 p-3 rounded-full">
-                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <rect width="20" height="4" x="2" y="10" rx="2"></rect>
-                    </svg>
-                </div>
-                <div>
-                    <h3 class="font-semibold text-gray-800">Construction Calculators</h3>
-                    <p class="text-sm text-gray-600 mt-1">Slabs, materials, project sizing, cost, and home/contractor tools for builders and pros.</p>
-                </div>
+   <a href="construction.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                    <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h3 class="text-xl font-bold mb-2">Construction</h3>
+                             </div>
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-600 mb-4">Materials, Projects, Tools, etc.</p>
+                        <div class="space-y-2">
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Costs
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Conversions
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                               Forecasts
+                            </div>
+                        </div>
+                    </div>
                 </a>
+
+
+                                      
 
                 <!-- "Browse All" Card -->
                 <div class="card-hover bg-gradient-to-br from-gray-800 to-gray-900 rounded-lg shadow-md overflow-hidden text-white">
