--- a/bac.html
+++ b/bac.html
@@ -396,7 +396,7 @@
                     <h2 id="formula-heading">The Formula Explained</h2>
                     <h3>US customary formulation</h3>
                     <div class="formula-box">
-                        <p>\( \text{BAC} = \frac{A_{\text{oz}} \times 5.14}{W_{\text{lb}} \times r} - \beta \times H \)</p>
+                        \[ \text{BAC} = \frac{A_{\text{oz}} \times 5.14}{W_{\text{lb}} \times r} - \beta \times H \]
                     </div>
                     <ul>
                         <li>\(A_{\text{oz}}\) = total fluid ounces of pure ethanol consumed (fl oz)</li>
@@ -407,8 +407,8 @@
                     </ul>
                     <h3>Metric formulation</h3>
                     <div class="formula-box">
-                        <p>\( A_g = \sum_i \big(V_{i,\text{mL}} \times \text{ABV}_i \times \rho_{\text{EtOH}}\big),\quad \rho_{\text{EtOH}} \approx 0.789\ \text{g/mL} \)</p>
-                        <p>\( \text{BAC}\% = \frac{A_g}{W_{\text{kg}} \times r \times 10} - \beta \times H \)</p>
+                        \[ A_g = \sum_i \big(V_{i,\text{mL}} \times \text{ABV}_i \times \rho_{\text{EtOH}}\big),\quad \rho_{\text{EtOH}} \approx 0.789\ \text{g/mL} \]
+                        \[ \text{BAC}\% = \frac{A_g}{W_{\text{kg}} \times r \times 10} - \beta \times H \]
                     </div>
 
                     <h2 id="glossary-heading">Glossary of Variables</h2>
@@ -432,8 +432,8 @@
                         <li>Enter Sex = Male → r = 0.73; Weight = 180 lb; Hours H = 1.5; β = 0.015.</li>
                         <li>Compute:
                             <div class="formula-box">
-                                <p>\( \text{Initial BAC} = \frac{1.2 \times 5.14}{180 \times 0.73} \approx 0.0472 \)</p>
-                                <p>\( \text{Final BAC} = 0.0472 - 0.015 \times 1.5 \approx 0.0247 \ (\approx 0.025\%) \)</p>
+                                \[ \text{Initial BAC} = \frac{1.2 \times 5.14}{180 \times 0.73} \approx 0.0472 \]
+                                \[ \text{Final BAC} = 0.0472 - 0.015 \times 1.5 \approx 0.0247 \ (\approx 0.025\%) \]
                             </div>
                         </li>
                         <li>Interpretation: About 0.025% BAC. Estimated time to 0.00% = 0.025 / 0.015 ≈ 1.7 hours.</li>
