--- a/bac.html
+++ b/bac.html
@@ -35,6 +35,9 @@
             overflow-x: auto; 
             font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
             margin: 1rem 0;
+            /* Added for MathJax rendering */
+            font-size: 1.1rem;
+            text-align: center;
         }
         details > summary { cursor: pointer; font-weight: 600; padding: 0.5rem 0; }
         details[open] > summary { margin-bottom: 0.5rem; }
@@ -124,7 +127,7 @@
       window.MathJax = {
         tex: {
           inlineMath: [['\(','\)'], ['$', '$']],
-          displayMath: [['$','$'], ['\[','\]']]
+          displayMath: [['$$','$$'], ['\[','\]']]
         },
         svg: { fontCache: 'global' }
       };
@@ -396,19 +399,19 @@
                     <h2 id="formula-heading">The Formula Explained</h2>
                     <h3>US customary formulation</h3>
                     <div class="formula-box">
-                        \[ \text{BAC} = \frac{A_{\text{oz}} \times 5.14}{W_{\text{lb}} \times r} - \beta \times H \]
+                        $$ \text{BAC} = \frac{A_{\text{oz}} \times 5.14}{W_{\text{lb}} \times r} - \beta \times H $$
                     </div>
                     <ul>
-                        <li>\(A_{\text{oz}}\) = total fluid ounces of pure ethanol consumed (fl oz)</li>
-                        <li>\(W_{\text{lb}}\) = body weight (lb)</li>
-                        <li>\(r\) = body water constant (~0.73 male, ~0.66 female)</li>
-                        <li>\(\beta\) = elimination rate (typically 0.015 %BAC/hour)</li>
-                        <li>\(H\) = hours since first drink</li>
+                        <li>$A_{\text{oz}}$ = total fluid ounces of pure ethanol consumed (fl oz)</li>
+                        <li>$W_{\text{lb}}$ = body weight (lb)</li>
+                        <li>$r$ = body water constant (~0.73 male, ~0.66 female)</li>
+                        <li>$\beta$ = elimination rate (typically 0.015 %BAC/hour)</li>
+                        <li>$H$ = hours since first drink</li>
                     </ul>
                     <h3>Metric formulation</h3>
                     <div class="formula-box">
-                        \[ A_g = \sum_i \big(V_{i,\text{mL}} \times \text{ABV}_i \times \rho_{\text{EtOH}}\big),\quad \rho_{\text{EtOH}} \approx 0.789\ \text{g/mL} \]
-                        \[ \text{BAC}\% = \frac{A_g}{W_{\text{kg}} \times r \times 10} - \beta \times H \]
+                        $$ A_g = \sum_i \big(V_{i,\text{mL}} \times \text{ABV}_i \times \rho_{\text{EtOH}}\big),\quad \rho_{\text{EtOH}} \approx 0.789\ \text{g/mL} $$
+                        $$ \text{BAC}\% = \frac{A_g}{W_{\text{kg}} \times r \times 10} - \beta \times H $$
                     </div>
 
                     <h2 id="glossary-heading">Glossary of Variables</h2>
@@ -428,12 +431,12 @@
 
                     <h2 id="example-heading">How It Works: A Step-by-Step Example</h2>
                     <ol>
-                        <li>Add two 12 fl oz beers at 5% ABV (US units). Pure alcohol \(A_{\text{oz}}\) = 2 × 12 × 0.05 = 1.2 fl oz.</li>
+                        <li>Add two 12 fl oz beers at 5% ABV (US units). Pure alcohol $A_{\text{oz}}$ = 2 × 12 × 0.05 = 1.2 fl oz.</li>
                         <li>Enter Sex = Male → r = 0.73; Weight = 180 lb; Hours H = 1.5; β = 0.015.</li>
                         <li>Compute:
                             <div class="formula-box">
-                                \[ \text{Initial BAC} = \frac{1.2 \times 5.14}{180 \times 0.73} \approx 0.0472 \]
-                                \[ \text{Final BAC} = 0.0472 - 0.015 \times 1.5 \approx 0.0247 \ (\approx 0.025\%) \]
+                                $$ \text{Initial BAC} = \frac{1.2 \times 5.14}{180 \times 0.73} \approx 0.0472 $$
+                                $$ \text{Final BAC} = 0.0472 - 0.015 \times 1.5 \approx 0.0247 \ (\approx 0.025\%) $$
                             </div>
                         </li>
                         <li>Interpretation: About 0.025% BAC. Estimated time to 0.00% = 0.025 / 0.015 ≈ 1.7 hours.</li>
