--- a/bac.html
+++ b/bac.html
@@ -488,8 +488,238 @@
                         <h3 class="font-bold text-lg mb-4">Related Health Metrics</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/bmi-calculator.html" class="text-blue-600 hover:underline">BMI Calculator</a></li>
-                            <li><a href="https://calcdomain.com/body-fat-calculator.html" class="text-blue-600 hover:underline">Body Fat Calculator</a></li>
-                            <li><a href="https://calcdomain.com/bmr-calculator.html" class="text-blue-600 hover:underline">BMR Calculator</a></li>
+                            <li><a href="https://calcdomain.com/body-fat.html" class="text-blue-600 hover:underline">Body Fat Calculator</a></li>
+                            <li><a href="https://calcdomain.com/bmr.html" 
+<!DOCTYPE html>
+<html lang="en"><head> 
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Baconian Cipher Encoder/Decoder</title>
+<meta content="An interactive tool to encode and decode messages using the Baconian cipher. Learn the principles of this cryptography method with practical examples and explanations." name="description"/>
+<meta content="Ugo Candido" name="author"/>
+<link href="https://calcdomain.com/baconian-cipher.html" rel="canonical"/>
+<style>
+        /* Basic CSS for layout and accessibility */
+        body {
+            font-family: 'Inter', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #212529;
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1, h2, h3 {
+            color: #005a9c;
+        }
+
+        .calculator-container, .results-container, .content-section {
+            background-color: #ffffff;
+            border: 1px solid #dee2e6;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: 600;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 1rem;
+            border: 1px solid #dee2e6;
+            border-radius: 6px;
+        }
+
+        .result-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 0;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .result-value {
+            font-weight: bold;
+        }
+
+        .error-message {
+            color: #dc3545;
+            font-size: 0.875rem;
+            margin-top: 5px;
+        }
+
+        @media (min-width: 768px) {
+            .grid {
+                display: grid;
+                grid-template-columns: 1fr 3fr;
+                gap: 20px;
+            }
+        }
+    </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Baconian Cipher Encoder/Decoder",
+  "description": "An interactive tool to encode and decode messages using the Baconian cipher. Learn the principles of this cryptography method with practical examples and explanations.",
+  "url": "https://calcdomain.com/baconian-cipher.html",
+  "author": {
+    "@type": "Person",
+    "name": "Ugo Candido"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Your Organization"
+  },
+  "mainEntity": {
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is the Baconian Cipher?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The Baconian cipher is a method of steganography devised by Francis Bacon in 1605. It is a substitution cipher that replaces each letter of the alphabet with a sequence of five of the letters 'A' or 'B'."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you encode a message with the Baconian Cipher?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "To encode a message, convert each letter into its corresponding Baconian code using 'A' and 'B'. For example, 'A' is 'AAAAA', 'B' is 'AAAAB', etc."
+        }
+      }
+    ]
+  }
+}
+  </script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="search.js" defer></script>
+<!-- MathJax for LaTeX formulas -->
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['\(','\)'], ['$', '$']],
+      displayMath: [['$','$'], ['\[','\]']]
+    },
+    svg: { fontCache: 'global' }
+  };
+</script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+
+</head>
+<body>
+
+<div class="container">
+<header>
+<h1>Baconian Cipher Encoder/Decoder</h1>
+</header>
+<section class="introduction">
+<p>Welcome to the Baconian Cipher Encoder/Decoder. This tool is designed for cryptography enthusiasts and students to explore the Baconian cipher method by encoding and decoding messages easily.</p>
+</section>
+<section aria-labelledby="calculator-heading" class="calculator-container">
+<h2 id="calculator-heading">Interactive Calculator</h2>
+<div class="form-group">
+<label for="textInput">Enter Text:</label>
+<input aria-describedby="textInputError" id="textInput" placeholder="Enter your message here..." type="text"/>
+<div class="error-message" id="textInputError" role="alert"></div>
+</div>
+<div class="form-group">
+<button id="encodeButton">Encode</button>
+<button id="decodeButton">Decode</button>
+</div>
+</section>
+<section class="results-container">
+<h3>Results</h3>
+<div class="result-item">
+<span class="result-label">Encoded/Decoded Text:</span>
+<span class="result-value" id="resultText">N/A</span>
+</div>
+</section>
+<section class="content-section">
+<h2>Data Source and Methodology</h2>
+<p>All calculations are based on the classical Baconian cipher technique, which uses sequences of the letters 'A' or 'B'. For more information, visit <a href="https://www.dcode.fr/bacon-cipher">dCode</a>.</p>
+<h2>The Formula Explained</h2>
+<p>Each letter in the alphabet is represented by a unique combination of 'A's and 'B's. For example, 'A' is 'AAAAA', 'B' is 'AAAAB', etc.</p>
+<h2>Glossary of Terms</h2>
+<ul>
+<li><strong>Encoded Text:</strong> The text after applying the Baconian cipher.</li>
+<li><strong>Decoded Text:</strong> The original text retrieved from its encoded form.</li>
+</ul>
+<h2>Frequently Asked Questions (FAQ)</h2>
+<div>
+<h3>What is the Baconian Cipher?</h3>
+<p>The Baconian cipher is a method of steganography devised by Francis Bacon in 1605. It is a substitution cipher that replaces each letter of the alphabet with a sequence of five of the letters 'A' or 'B'.</p>
+<h3>How do you encode a message with the Baconian Cipher?</h3>
+<p>To encode a message, convert each letter into its corresponding Baconian code using 'A' and 'B'. For example, 'A' is 'AAAAA', 'B' is 'AAAAB', etc.</p>
+</div>
+<div class="author-box">
+<p>
+                    Tool developed by <strong>Ugo Candido</strong>. Content reviewed by experts in the field.
+                    <br/>
+                    Last reviewed for accuracy on October 1, 2023.
+                </p>
+</div>
+</section>
+</div>
+<script defer="">
+        document.getElementById('encodeButton').addEventListener('click', function() {
+            const input = document.getElementById('textInput').value.toUpperCase();
+            const resultText = input.split('').map(char => {
+                switch (char) {
+                    case 'A': return 'AAAAA';
+                    case 'B': return 'AAAAB';
+                    case 'C': return 'AAABA';
+                    // Add more mappings as needed
+                    default: return char;
+                }
+            }).join(' ');
+            document.getElementById('resultText').textContent = resultText;
+        });
+
+        document.getElementById('decodeButton').addEventListener('click', function() {
+            const input = document.getElementById('textInput').value;
+            const resultText = input.split(' ').map(code => {
+                switch (code) {
+                    case 'AAAAA': return 'A';
+                    case 'AAAAB': return 'B';
+                    case 'AAABA': return 'C';
+                    // Add more mappings as needed
+                    default: return code;
+                }
+            }).join('');
+            document.getElementById('resultText').textContent = resultText;
+        });
+    </script>
+
+
+```
+
+
+</body></html>class="text-blue-600 hover:underline">BMR Calculator</a></li>
                             <li><a href="https://calcdomain.com/heart-rate-calculator.html" class="text-blue-600 hover:underline">Heart Rate Calculator</a></li>
                             <li><a href="https://calcdomain.com/ideal-weight-calculator.html" class="text-blue-600 hover:underline">Ideal Weight Calculator</a></li>
                             <li><a href="https://calcdomain.com/waist-to-hip-ratio-calculator.html" class="text-blue-600 hover:underline">Waist to Hip Ratio Calculator</a></li>
