--- a/baconian-cipher.html
+++ b/baconian-cipher.html
@@ -154,7 +154,7 @@
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="https://calcdomain.com/lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle & Everyday Calculators</a> &raquo;
-                    <a href="https://calcdomain.com/hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
+                    <a href="https://calcdomain.com/subcategories/hobbies.html" class="hover:text-blue-600">Hobbies</a> &raquo;
                     <span>Baconian Cipher Encoder/Decoder</span>
                 </nav>
 
