--- a/html-entity-encoder.html
+++ b/html-entity-encoder.html
@@ -33,6 +33,15 @@
             font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
             margin: 1rem 0;
         }
+        /* Added style for inline code */
+        .prose code {
+            background-color: #f3f4f6;
+            border-radius: 4px;
+            padding: 2px 6px;
+            font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+            font-size: 0.9rem;
+            color: #1f2937;
+        }
         details > summary { cursor: pointer; font-weight: 600; padding: 0.5rem 0; }
         details[open] > summary { margin-bottom: 0.5rem; }
         .help-tooltip { 
@@ -191,7 +200,7 @@
                     <p>This tool uses the comprehensive HTML entity list from <a href="https://mothereff.in/html-entities" rel="noopener" target="_blank">Mother Effing HTML Entities</a>. All calculations are based on these standardized entities.</p>
                     
                     <h2>The Formula Explained</h2>
-                    <p>Encoding and decoding follow simple string replacement rules using standard HTML entity references. Encoding converts special characters (like $&lt;$, $&gt;$, $&amp;$) into their entity equivalents (like $&amp;lt;$, $&amp;gt;$, $&amp;amp;$). Decoding reverses this process.</p>
+                    <p>Encoding and decoding follow simple string replacement rules using standard HTML entity references. Encoding converts special characters (like <code>&lt;</code>, <code>&gt;</code>, <code>&amp;</code>) into their entity equivalents (like <code>&amp;lt;</code>, <code>&amp;gt;</code>, <code>&amp;amp;</code>). Decoding reverses this process.</p>
                     
                     <h2>Glossary of Variables</h2>
                     <ul>
@@ -202,17 +211,17 @@
 
                     <h2>Practical Example</h2>
                     <h3>How It Works: A Step-by-Step Example</h3>
-                    <p>To encode the text <strong>"Hello & welcome"</strong>, it will be converted to <strong>"Hello &amp;amp; welcome"</strong> using HTML entity encoding. (Note: The ampersand itself is encoded).</p>
+                    <p>To encode the text <strong>"Hello &amp; welcome"</strong>, it will be converted to <strong>"Hello &amp;amp; welcome"</strong> using HTML entity encoding. (Note: The ampersand itself is encoded).</p>
                     <p>To encode <strong>"&lt;p&gt;Test&lt;/p&gt;"</strong>, it will be converted to <strong>"&amp;lt;p&amp;gt;Test&amp;lt;/p&amp;gt;"</strong> to display the HTML tags as plain text.</p>
 
                     <h2>Frequently Asked Questions (FAQ)</h2>
                     <details class="border-b py-2">
                         <summary>What is an HTML entity?</summary>
-                        <p class="mt-2 text-gray-700">An HTML entity is a piece of text (string) that begins with an ampersand (&amp;) and ends with a semicolon (;). They are used to display reserved characters or special symbols.</p>
+                        <p class="mt-2 text-gray-700">An HTML entity is a piece of text (string) that begins with an ampersand (<code>&amp;</code>) and ends with a semicolon (<code>;</code>). They are used to display reserved characters or special symbols.</p>
                     </details>
                     <details class="border-b py-2">
                         <summary>Why use HTML entities?</summary>
-                        <p class="mt-2 text-gray-700">HTML entities are used to display reserved characters in HTML like &lt;, &gt;, &amp;, etc. If you don't encode them, the browser will try to interpret them as HTML code, which can break your page layout or create security vulnerabilities (like Cross-Site Scripting, XSS).</p>
+                        <p class="mt-2 text-gray-700">HTML entities are used to display reserved characters in HTML like <code>&lt;</code>, <code>&gt;</code>, <code>&amp;</code>, etc. If you don't encode them, the browser will try to interpret them as HTML code, which can break your page layout or create security vulnerabilities (like Cross-Site Scripting, XSS).</p>
                     </details>
                     <details class="border-b py-2">
                         <summary>How do I encode HTML entities?</summary>
