--- a/kite-calculator.html
+++ b/kite-calculator.html
@@ -82,8 +82,8 @@ MathJax = {
       "@type": "BreadcrumbList",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
-        { "@type": "ListItem", "position": 2, "name": "Math", "item": "https://calcdomain.com/math.html" },
-        { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com/subcategories/math-geometry.html" },
+        { "@type": "ListItem", "position": 2, "name": "Math", "item": "https://calcdomain.com/math-conversions.html" },
+        { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com/subcategories/geometry.html" },
         { "@type": "ListItem", "position": 4, "name": "Kite Calculator", "item": "https://calcdomain.com/kite-calculator.html" }
       ]
     }
