--- a/equilateral-triangle-calculator.html
+++ b/equilateral-triangle-calculator.html
@@ -76,8 +76,8 @@ MathJax = {
       "@type": "BreadcrumbList",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
-        { "@type": "ListItem", "position": 2, "name": "Math", "item": "https://calcdomain.com/math.html" },
-        { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com/subcategories/math-geometry.html" },
+        { "@type": "ListItem", "position": 2, "name": "Math", "item": "https://calcdomain.com/math-conversions.html" },
+        { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com/subcategories/geometry.html" },
         { "@type": "ListItem", "position": 4, "name": "Equilateral Triangle Calculator", "item": "https://calcdomain.com/equilateral-triangle-calculator.html" }
       ]
     }
