--- a/index.html
+++ b/index.html
@@ -137,6 +137,29 @@
 <link rel="preload" href="assets/js/mobile-menu.js" as="script">
 <link rel="preload" href="assets/js/page-enhancements.js" as="script">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "CalcDomain",
+  "url": "https://calcdomain.com",
+  "logo": "https://calcdomain.com/apple-touch-icon.png" 
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CalcDomain",
+  "url": "https://calcdomain.com",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://calcdomain.com/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
@@ -513,11 +536,11 @@
                         </div>
                     </div>
                 </a>
-   <a href="https://calcdomain.com/construction-diy" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+   <a href="https://calcdomain.com/construction" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
-                                <h3 class="text-xl font-bold mb-2">Construction</h3>
+                                <h3 class="text-xl font-bold mb-2">Construction Pro</h3>
                              </div>
                             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                         </div>
