--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .search-highlight {
             background: linear-gradient(120deg, #fbbf24 0%, #f59e0b 100%);
             padding: 2px 4px;
-            border-radius: 4px;localhost
+            border-radius: 4px;
             font-weight: 600;
             color: #78350f;
         }
@@ -668,7 +668,7 @@
 
 <!-- Mobile menu script (file esterno) -->
 <script src="/assets/js/mobile-menu.js" defer></script>
-
+<script src="/assets/js/page-enhancements.js" defer></script>
 <!-- Hero Search Integration -->
 <script>
 document.addEventListener('DOMContentLoaded', function() {
